syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.openobserve.cluster";
option java_outer_classname = "querycacheProto";

package cluster;

service QueryCache {
    rpc DeleteResultCache (DeleteResultCacheRequest) returns (DeleteResultCacheResponse) {}
}

message DeleteResultCacheRequest {
    string  path = 1; 
    int64   ts = 2; 
}

message DeleteResultCacheResponse {
    bool deleted = 1;  
}
